--- a/Notebooks/data_preparation.ipynb
+++ b/Notebooks/data_preparation.ipynb
@@ -17,13 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "68818e89",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths\n",
-    "RAW_DATA_PATH = \"../data/raw/downloaded_file.csv\"\n",
+    "RAW_DATA_PATH = \"../data/raw/waste_data.csv\"\n",
     "ENCODER_SAVE_PATH = \"../models/encoders.pkl\"\n",
     "CLEAN_DATA_PATH = \"../data/processed/clean_train.csv\"\n"
    ]
