--- a/Notebooks/exploratory_data_analysis.ipynb
+++ b/Notebooks/exploratory_data_analysis.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "39bb07f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load raw dataset (not preprocessed, for EDA readability)\n",
-    "df = pd.read_csv(\"../data/raw/downloaded_file.csv\")"
+    "df = pd.read_csv(\"../data/raw/waste_data.csv\")"
    ]
   },
   {
