Fix issues of columns not found

--- a/Notebooks/data_preparation.ipynb
+++ b/Notebooks/data_preparation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "68818e89",
    "metadata": {},
    "outputs": [],
@@ -226,22 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "98271f7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Extract Landfill Latitude & Longitude ---\n",
-    "df[['Landfill Lat', 'Landfill Lon']] = (\n",
-    "    df['Landfill Location (Lat, Long)']\n",
-    "    .str.strip(\"()\")\n",
-    "    .str.split(\",\", expand=True)\n",
-    "    .astype(float)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "6429270a",
    "metadata": {},
    "outputs": [],
@@ -252,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9739a847",
    "metadata": {},
    "outputs": [],
@@ -267,15 +251,13 @@
     "    'Cost of Waste Management (₹/Ton)',\n",
     "    'Awareness Campaigns Count',\n",
     "    'Landfill Capacity (Tons)',\n",
-    "    'Year',\n",
-    "    'Landfill Lat',\n",
-    "    'Landfill Lon'\n",
+    "    'Year'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7d6481d7",
    "metadata": {},
    "outputs": [],
@@ -287,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "88d47a70",
    "metadata": {},
    "outputs": [],
@@ -298,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "56f17eb8",
    "metadata": {},
    "outputs": [],
@@ -310,7 +292,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
+   "id": "914c1ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['City/District',\n",
+       " 'Waste Generated (Tons/Day)',\n",
+       " 'Population Density (People/km²)',\n",
+       " 'Municipal Efficiency Score (1-10)',\n",
+       " 'Cost of Waste Management (₹/Ton)',\n",
+       " 'Awareness Campaigns Count',\n",
+       " 'Landfill Capacity (Tons)',\n",
+       " 'Year',\n",
+       " 'Waste Type_E-Waste',\n",
+       " 'Waste Type_Hazardous',\n",
+       " 'Waste Type_Organic',\n",
+       " 'Waste Type_Plastic',\n",
+       " 'Disposal Method_Incineration',\n",
+       " 'Disposal Method_Landfill',\n",
+       " 'Disposal Method_Recycling']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_columns = df.columns.to_list()\n",
+    "final_columns.remove('Recycling Rate (%)')\n",
+    "final_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "facdd3a9",
    "metadata": {},
    "outputs": [
@@ -320,19 +339,19 @@
        "['../models/encoders.pkl']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Save encoders for inference\n",
-    "joblib.dump({'target_enc': target_enc, 'scaler': scaler}, ENCODER_SAVE_PATH)"
+    "joblib.dump({'target_enc': target_enc, 'scaler': scaler, \"feature_names\": final_columns}, ENCODER_SAVE_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "4822931b",
    "metadata": {},
    "outputs": [],
@@ -343,17 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "dde11b49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(850, 18)"
+       "(850, 16)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "f0056c13",
    "metadata": {},
    "outputs": [
@@ -398,8 +417,6 @@
        "      <th>Awareness Campaigns Count</th>\n",
        "      <th>Landfill Capacity (Tons)</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Landfill Lat</th>\n",
-       "      <th>Landfill Lon</th>\n",
        "      <th>Waste Type_E-Waste</th>\n",
        "      <th>Waste Type_Hazardous</th>\n",
        "      <th>Waste Type_Organic</th>\n",
@@ -421,8 +438,6 @@
        "      <td>0.674989</td>\n",
        "      <td>-0.688562</td>\n",
        "      <td>-1.414214</td>\n",
-       "      <td>0.086246</td>\n",
-       "      <td>-0.793881</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -442,8 +457,6 @@
        "      <td>0.345348</td>\n",
        "      <td>-0.688562</td>\n",
        "      <td>-1.414214</td>\n",
-       "      <td>0.086246</td>\n",
-       "      <td>-0.793881</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -463,8 +476,6 @@
        "      <td>0.510168</td>\n",
        "      <td>-0.688562</td>\n",
        "      <td>-1.414214</td>\n",
-       "      <td>0.086246</td>\n",
-       "      <td>-0.793881</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -484,8 +495,6 @@
        "      <td>0.674989</td>\n",
        "      <td>-0.688562</td>\n",
        "      <td>-1.414214</td>\n",
-       "      <td>0.086246</td>\n",
-       "      <td>-0.793881</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -505,8 +514,6 @@
        "      <td>1.004630</td>\n",
        "      <td>-0.688562</td>\n",
        "      <td>-1.414214</td>\n",
-       "      <td>0.086246</td>\n",
-       "      <td>-0.793881</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -541,26 +548,26 @@
        "3                         -1.003829                   0.674989   \n",
        "4                         -0.437026                   1.004630   \n",
        "\n",
-       "   Landfill Capacity (Tons)      Year  Landfill Lat  Landfill Lon  \\\n",
-       "0                 -0.688562 -1.414214      0.086246     -0.793881   \n",
-       "1                 -0.688562 -1.414214      0.086246     -0.793881   \n",
-       "2                 -0.688562 -1.414214      0.086246     -0.793881   \n",
-       "3                 -0.688562 -1.414214      0.086246     -0.793881   \n",
-       "4                 -0.688562 -1.414214      0.086246     -0.793881   \n",
+       "   Landfill Capacity (Tons)      Year  Waste Type_E-Waste  \\\n",
+       "0                 -0.688562 -1.414214               False   \n",
+       "1                 -0.688562 -1.414214               False   \n",
+       "2                 -0.688562 -1.414214                True   \n",
+       "3                 -0.688562 -1.414214               False   \n",
+       "4                 -0.688562 -1.414214               False   \n",
        "\n",
-       "   Waste Type_E-Waste  Waste Type_Hazardous  Waste Type_Organic  \\\n",
-       "0               False                 False               False   \n",
-       "1               False                 False                True   \n",
-       "2                True                 False               False   \n",
-       "3               False                 False               False   \n",
-       "4               False                  True               False   \n",
+       "   Waste Type_Hazardous  Waste Type_Organic  Waste Type_Plastic  \\\n",
+       "0                 False               False                True   \n",
+       "1                 False                True               False   \n",
+       "2                 False               False               False   \n",
+       "3                 False               False               False   \n",
+       "4                  True               False               False   \n",
        "\n",
-       "   Waste Type_Plastic  Disposal Method_Incineration  Disposal Method_Landfill  \\\n",
-       "0                True                         False                     False   \n",
-       "1               False                         False                     False   \n",
-       "2               False                          True                     False   \n",
-       "3               False                         False                      True   \n",
-       "4               False                         False                     False   \n",
+       "   Disposal Method_Incineration  Disposal Method_Landfill  \\\n",
+       "0                         False                     False   \n",
+       "1                         False                     False   \n",
+       "2                          True                     False   \n",
+       "3                         False                      True   \n",
+       "4                         False                     False   \n",
        "\n",
        "   Disposal Method_Recycling  \n",
        "0                      False  \n",
@@ -570,7 +577,7 @@
        "4                       True  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
