--- a/Notebooks/model_training.ipynb
+++ b/Notebooks/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1b7501ae",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,15 @@
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from xgboost import XGBRegressor\n",
-    "from lightgbm import LGBMRegressor"
+    "from lightgbm import LGBMRegressor\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "13fec2a3",
    "metadata": {},
    "outputs": [],
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bfd856c2",
    "metadata": {},
    "outputs": [],
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "50e6364e",
    "metadata": {},
    "outputs": [],
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9c003363",
    "metadata": {},
    "outputs": [],
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "df1bd888",
    "metadata": {},
    "outputs": [
@@ -89,8 +92,9 @@
       "Gradient Boosting: 16.9587\n",
       "XGBoost: 18.1668\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000119 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000120 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 516\n",
       "[LightGBM] [Info] Number of data points in the train set: 544, number of used features: 15\n",
       "[LightGBM] [Info] Start training from score 57.702206\n",
@@ -195,7 +199,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000078 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000136 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 516\n",
       "[LightGBM] [Info] Number of data points in the train set: 544, number of used features: 15\n",
@@ -301,7 +305,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000087 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000127 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 516\n",
       "[LightGBM] [Info] Number of data points in the train set: 544, number of used features: 15\n",
@@ -407,7 +411,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000111 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000176 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 516\n",
       "[LightGBM] [Info] Number of data points in the train set: 544, number of used features: 15\n",
@@ -513,7 +517,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "[LightGBM] [Warning] Found whitespace in feature_names, replace with underlines\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000118 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000152 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 515\n",
       "[LightGBM] [Info] Number of data points in the train set: 544, number of used features: 15\n",
@@ -633,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b4a6a2c2",
    "metadata": {},
    "outputs": [
@@ -653,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c9d5c4bc",
    "metadata": {},
    "outputs": [],
@@ -666,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "275eb048",
    "metadata": {},
    "outputs": [],
@@ -684,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "2cf08cdd",
    "metadata": {},
    "outputs": [
@@ -1480,7 +1484,7 @@
        "                   random_state=42, scoring='neg_root_mean_squared_error')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "2b08e2b0",
    "metadata": {},
    "outputs": [
@@ -2287,7 +2291,7 @@
        "                   random_state=42, scoring='neg_root_mean_squared_error')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2298,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "952ff37d",
    "metadata": {},
    "outputs": [
@@ -2308,7 +2312,7 @@
        "{'max_iter': 5000, 'alpha': np.float64(0.9540954763499944)}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2319,7 +2323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "65d5dc8c",
    "metadata": {},
    "outputs": [],
@@ -2330,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0eafd50b",
    "metadata": {},
    "outputs": [
@@ -2348,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "39f0163c",
    "metadata": {},
    "outputs": [
@@ -2358,7 +2362,7 @@
        "['../models/final_model.pkl']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
