--- a/Notebooks/data_preparation.ipynb
+++ b/Notebooks/data_preparation.ipynb
@@ -11,8 +11,7 @@
     "import numpy as np\n",
     "from category_encoders import TargetEncoder\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import joblib\n",
-    "import os"
+    "import joblib"
    ]
   },
   {
@@ -226,7 +225,280 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "1d5952b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(850, 13)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "36e0a3b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City/District                        0\n",
+       "Waste Type                           0\n",
+       "Waste Generated (Tons/Day)           0\n",
+       "Recycling Rate (%)                   0\n",
+       "Population Density (People/km²)      0\n",
+       "Municipal Efficiency Score (1-10)    0\n",
+       "Disposal Method                      0\n",
+       "Cost of Waste Management (₹/Ton)     0\n",
+       "Awareness Campaigns Count            0\n",
+       "Landfill Name                        0\n",
+       "Landfill Location (Lat, Long)        0\n",
+       "Landfill Capacity (Tons)             0\n",
+       "Year                                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "6429270a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 850 entries, 0 to 849\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                             Non-Null Count  Dtype \n",
+      "---  ------                             --------------  ----- \n",
+      " 0   City/District                      850 non-null    object\n",
+      " 1   Waste Type                         850 non-null    object\n",
+      " 2   Waste Generated (Tons/Day)         850 non-null    int64 \n",
+      " 3   Recycling Rate (%)                 850 non-null    int64 \n",
+      " 4   Population Density (People/km²)    850 non-null    int64 \n",
+      " 5   Municipal Efficiency Score (1-10)  850 non-null    int64 \n",
+      " 6   Disposal Method                    850 non-null    object\n",
+      " 7   Cost of Waste Management (₹/Ton)   850 non-null    int64 \n",
+      " 8   Awareness Campaigns Count          850 non-null    int64 \n",
+      " 9   Landfill Name                      850 non-null    object\n",
+      " 10  Landfill Location (Lat, Long)      850 non-null    object\n",
+      " 11  Landfill Capacity (Tons)           850 non-null    int64 \n",
+      " 12  Year                               850 non-null    int64 \n",
+      "dtypes: int64(8), object(5)\n",
+      "memory usage: 86.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0b55d04d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Waste Generated (Tons/Day)</th>\n",
+       "      <th>Recycling Rate (%)</th>\n",
+       "      <th>Population Density (People/km²)</th>\n",
+       "      <th>Municipal Efficiency Score (1-10)</th>\n",
+       "      <th>Cost of Waste Management (₹/Ton)</th>\n",
+       "      <th>Awareness Campaigns Count</th>\n",
+       "      <th>Landfill Capacity (Tons)</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5262.249412</td>\n",
+       "      <td>57.076471</td>\n",
+       "      <td>13489.705882</td>\n",
+       "      <td>7.400000</td>\n",
+       "      <td>2778.458824</td>\n",
+       "      <td>9.904706</td>\n",
+       "      <td>58934.617647</td>\n",
+       "      <td>2021.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2786.984735</td>\n",
+       "      <td>16.129994</td>\n",
+       "      <td>6631.081494</td>\n",
+       "      <td>1.722162</td>\n",
+       "      <td>1276.325630</td>\n",
+       "      <td>6.070772</td>\n",
+       "      <td>19413.627292</td>\n",
+       "      <td>1.415046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>511.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>2335.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>503.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>22690.000000</td>\n",
+       "      <td>2019.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>2865.750000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>7927.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>1647.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>45575.000000</td>\n",
+       "      <td>2020.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5283.000000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>12579.500000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>2853.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>61038.500000</td>\n",
+       "      <td>2021.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7757.250000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>19087.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>3855.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>71127.000000</td>\n",
+       "      <td>2022.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>9980.000000</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>24032.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>4999.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>98646.000000</td>\n",
+       "      <td>2023.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Waste Generated (Tons/Day)  Recycling Rate (%)  \\\n",
+       "count                  850.000000          850.000000   \n",
+       "mean                  5262.249412           57.076471   \n",
+       "std                   2786.984735           16.129994   \n",
+       "min                    511.000000           30.000000   \n",
+       "25%                   2865.750000           43.000000   \n",
+       "50%                   5283.000000           56.000000   \n",
+       "75%                   7757.250000           71.000000   \n",
+       "max                   9980.000000           85.000000   \n",
+       "\n",
+       "       Population Density (People/km²)  Municipal Efficiency Score (1-10)  \\\n",
+       "count                       850.000000                         850.000000   \n",
+       "mean                      13489.705882                           7.400000   \n",
+       "std                        6631.081494                           1.722162   \n",
+       "min                        2335.000000                           5.000000   \n",
+       "25%                        7927.000000                           6.000000   \n",
+       "50%                       12579.500000                           7.000000   \n",
+       "75%                       19087.000000                           9.000000   \n",
+       "max                       24032.000000                          10.000000   \n",
+       "\n",
+       "       Cost of Waste Management (₹/Ton)  Awareness Campaigns Count  \\\n",
+       "count                        850.000000                 850.000000   \n",
+       "mean                        2778.458824                   9.904706   \n",
+       "std                         1276.325630                   6.070772   \n",
+       "min                          503.000000                   0.000000   \n",
+       "25%                         1647.500000                   5.000000   \n",
+       "50%                         2853.000000                  10.000000   \n",
+       "75%                         3855.000000                  15.000000   \n",
+       "max                         4999.000000                  20.000000   \n",
+       "\n",
+       "       Landfill Capacity (Tons)         Year  \n",
+       "count                850.000000   850.000000  \n",
+       "mean               58934.617647  2021.000000  \n",
+       "std                19413.627292     1.415046  \n",
+       "min                22690.000000  2019.000000  \n",
+       "25%                45575.000000  2020.000000  \n",
+       "50%                61038.500000  2021.000000  \n",
+       "75%                71127.000000  2022.000000  \n",
+       "max                98646.000000  2023.000000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ba40c3dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +508,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "id": "69f42dab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City/District                        object\n",
+       "Waste Type                           object\n",
+       "Waste Generated (Tons/Day)            int64\n",
+       "Recycling Rate (%)                    int64\n",
+       "Population Density (People/km²)       int64\n",
+       "Municipal Efficiency Score (1-10)     int64\n",
+       "Disposal Method                      object\n",
+       "Cost of Waste Management (₹/Ton)      int64\n",
+       "Awareness Campaigns Count             int64\n",
+       "Landfill Capacity (Tons)              int64\n",
+       "Year                                  int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f4596c05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"City/District\"].unique().size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f1bb8b83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Waste Type\"].unique().size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b3314df0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Disposal Method\"].unique().size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "9739a847",
    "metadata": {},
    "outputs": [],
@@ -257,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "7d6481d7",
    "metadata": {},
    "outputs": [],
@@ -269,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "88d47a70",
    "metadata": {},
    "outputs": [],
@@ -280,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "56f17eb8",
    "metadata": {},
    "outputs": [],
@@ -292,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "914c1ce0",
    "metadata": {},
    "outputs": [
@@ -316,7 +683,7 @@
        " 'Disposal Method_Recycling']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "facdd3a9",
    "metadata": {},
    "outputs": [
@@ -339,7 +706,7 @@
        "['../models/encoders.pkl']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "4822931b",
    "metadata": {},
    "outputs": [],
@@ -362,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "dde11b49",
    "metadata": {},
    "outputs": [
@@ -372,7 +739,7 @@
        "(850, 16)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "f0056c13",
    "metadata": {},
    "outputs": [
@@ -577,7 +944,7 @@
        "4                       True  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
